[gd_scene load_steps=3 format=3 uid="uid://bv3smcvbfcn30"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_xq87v"]
[ext_resource type="Theme" uid="uid://bsw0hesjvm384" path="res://fonts/Main_Theme.tres" id="2_mg71j"]

[node name="Pause_Menu" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xq87v")

[node name="Menu_Background" type="PanelContainer" parent="."]
layout_mode = 1
offset_right = 1600.0
offset_bottom = 900.0

[node name="MarginContainer" type="MarginContainer" parent="Menu_Background"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Menu_Background/MarginContainer"]
layout_mode = 2

[node name="Resume_Game" type="Button" parent="Menu_Background/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_mg71j")
text = "Resume Game"

[node name="Main_Menu" type="Button" parent="Menu_Background/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_mg71j")
text = "Main Menu"

[node name="Exit_Game" type="Button" parent="Menu_Background/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_mg71j")
text = "Exit Game"

[connection signal="pressed" from="Menu_Background/MarginContainer/VBoxContainer/Resume_Game" to="." method="_on_resume_game_pressed"]
[connection signal="pressed" from="Menu_Background/MarginContainer/VBoxContainer/Main_Menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="Menu_Background/MarginContainer/VBoxContainer/Exit_Game" to="." method="_on_exit_game_pressed"]
